# bsv-dilligence

./: .env  README.md  companies.json  index.html  pyproject.toml
output/: memo.md  ranking.json
output/cache/: atuin.raw.json  baml.raw.json  entire.raw.json  mem0.raw.json  parasail.raw.json  primitive.raw.json  rasa.raw.json  tigris_data.raw.json
output/scorecards/: atuin.json  baml.json  entire.json  mem0.json  parasail.json  primitive.json  rasa.json  tigris_data.json
src/: main.py  models.py
src/analysis/: __init__.py  llm.py  ranker.py  scorer.py
src/collectors/: __init__.py  github.py  hackernews.py  packages.py  web.py
src/output/: __init__.py  dashboard.py  memo.py
