[project]
name = "bsv-diligence"
version = "0.1.0"
description = "BSV Diligence Agent - evaluates early-stage dev-tools companies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "rich>=13.7.0",
    "tenacity>=8.5.0",
    "selectolax>=0.3.21",
    "python-dotenv>=1.0.1",
    "click>=8.1.7",
]

[project.scripts]
bsv-diligence = "src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
